--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,39 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.btn {
+  padding: 10px;
+  text-transform: uppercase;
+  border: 1px solid #808080;
+  border-radius: 3px;
+  background-color: #fff;
+}
+
+.btn:hover {
+  background-color: #eae4e4;
+  cursor: pointer;
+}
+
+.btn[disabled] {
+  background-color: #ccc9c9;
+}
+
+.timer {
+  display: flex;
+  gap: 30px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+span.value {
+  font-size: 40px;
+}
+
+span.label {
+  text-transform: uppercase;
+}
